Fix text alignment issue

--- a/stockaveragecalculator/style.css
+++ b/stockaveragecalculator/style.css
@@ -73,9 +73,7 @@ span {
 bold {
   font-weight: bold;
 }
-input[type="number"] {
-  text-align: right;
-}
+
 
 
 #investedamount1,
